--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 aws_access_key_id=AKIAIKPLMUKPGQCQLMBA
 aws_secret_access_key=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
+s3_bucket=barkr2-development
